fix for bug #12591 (SHOW TABLES FROM dbname produces wrong error message)

mysql-test/r/show_check.result:
  results for test for bug #12591
mysql-test/t/show_check.test:
  test for bug #12591
sql/sql_show.cc:
  don't let my_dir() emit a message bug catch the errno (my_errno - a thread specific variable) and check it for ENOENT - not existing.
  For other errors emulate the message used to be emitted by my_dir()